fix: planner add task styling acting out on mobile

--- a/src/app/features/planner/planner-plan-view/planner-plan-view.component.scss
+++ b/src/app/features/planner/planner-plan-view/planner-plan-view.component.scss
@@ -20,5 +20,6 @@
 
   @include mq(xs, max) {
     display: block;
+    max-width: 100%;
   }
 }
